fixed spacing carousel and arrows

--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,9 @@
 
 
 html {
+    margin: 0;
     height: 100%;
+    min-height: 100%;
 }
 
 *, *::before, *::after{
@@ -16,12 +18,16 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
 
+    
     min-height: 100%;
 
     display: flex;
     flex-direction: column;
 }
 
+main{
+    margin-top: 500rem;
+}
 
 /* CSS for the carousel */
 
@@ -29,7 +35,7 @@ body {
     position: relative;
     height: 400px;
     width: 80%;
-    margin: 0 auto;
+    margin: 0 auto ;
 }
 
 .carousel__track-container {
@@ -37,6 +43,7 @@ body {
     height: 100%;
     position: relative;
     overflow: hidden;
+    margin-top: 10rem;
 }
 
 .carousel__track {
@@ -57,7 +64,7 @@ body {
 
 .carousel__btn {
     position: absolute;
-    top: 50%;
+    top: 90%;
     transform: translateY(-50%);
     background: black;
     border: 0;
