--- a/css/post.css
+++ b/css/post.css
@@ -1,5 +1,9 @@
+.post-container{
+    margin: 8rem;
+}
+
 .blog-post{
-    margin: 5rem;
+    margin: 10rem;
     margin-left: 6rem;
     padding: 1rem;
     max-width: 80%;
